# dlplugin

./: AUTHORS  ChangeLog  MAINTAINER-README  Makefile.am  NEWS  README  TODO  bootstrap.sh  configure.ac  documentation.dox  doxygen.cfg
benchmarks/birdpenguin/: benchmark.sh  benchmark_all.sh  benchmark_single.sh  run.sh
benchmarks/birdpenguin-liberalsafety/: benchmark_all.sh  benchmark_single.sh  run.sh
benchmarks/wine/: benchmark_all.sh  benchmark_omega.sh  benchmark_pi.sh  benchmark_single.sh  benchmark_y.sh  doaggregation.sh  run.sh
benchmarks/wine/ontologies/: wine_02.owl  wine_04.owl  wine_05.owl  wine_1_nodollar.owl  wine_3_nodollar.owl  wine_6_nodollar.owl
examples/: Makefile.am  b.owl  benchmark.sh  bird-tp.df  bird.df  bird.hex  bird.owl  booze.hex  dl-shop.dlp  food.rdf  mytests.test  nixon.df  researcher.dlp  shop+test.dlp  shop-consistent.dlp  shop-http.dlp  shop-inconsistent-small.dlp  shop-inconsistent.dlp  shop.dlp  small_wine-tp.df  small_wine.hex  student.df  student.hex  student.owl  test.dlp  test.owl  tweety.hex  tweety_benchmark.hex  tweety_bird.df  tweety_bird.dlp  tweety_bird.owl  ucq.dlp  wine.rdf  wine_benchmark.sh  wine_benchmark_omega.sh  wine_benchmark_pi.sh  wine_benchmark_y.sh  wine_count.sh  wine_small.df  wine_small.owl  (+5 more)
examples/tests/: shop+test.out  shop-consistent.out  shop-http.out  shop-inconsistent-small.out  shop-inconsistent.out  shop.out  test.out  wires.out
examples/wine/: omega.job  omega.sh  pi.job  pi.sh  wine.rdf  wine_benchmark.sh  y.job
examples/wine_all/: omega.job  omega.sh  pi.job  pi.sh  time.txt  wine_benchmark.sh  y.job  y.sh
examples/wine_all/ontologies/: wine_1_nodollar.owl  wine_2_nodollar.owl  wine_7_nodollar.owl  wine_8_nodollar.owl
include/: Answer.h  AtomSeparator.h  Cache.h  DFConverter.h  DFOutputBuilder.h  DFProcessor.h  DFRewriter.h  DLAtom.h  DLAtoms.h  DLError.h  DLOptimizer.h  DLQuery.h  DLRewriter.h  DLRule.h  DLRules.h  Default.h  DefaultParser.h  Defaults.h  HexDLConverter.h  HexDLDriver.h  HexDLFlexLexer.h  HexDLRewriter.h  HexDLRewriterDriver.h  HexDLRewriterFlexLexer.h  KBManager.h  LogBuf.h  MTerm.h  Makefile.am  OWLParser.h  Ontology.h  Pred1Dim.h  Pred2Dim.h  Predicate.h  Prefix.h  Prefixes.h  Query.h  QueryCtx.h  QueryDirector.h  QueryDirector.tcc  RacerAnswerDriver.h  (+25 more)
m4/: ace.m4  dlvhex.m4
racer_bugreport/: README.txt  nixon_bugcase.racer  nixon_goodcase.racer  racer-bad-cmd-seq.racer
src/: Answer.cpp  AtomSeparator.cpp  Cache.cpp  DFConverter.cpp  DFOutputBuilder.cpp  DFProcessor.cpp  DFRewriter.cpp  DLAtom.cpp  DLAtoms.cpp  DLOptimizer.cpp  DLQuery.cpp  DLRewriter.cpp  DLRule.cpp  DLRules.cpp  Default.cpp  DefaultParser.cpp  Defaults.cpp  HexDLConverter.cpp  HexDLDriver.cpp  HexDLParser.cpp  HexDLParser.hpp  HexDLParser.output  HexDLParser.ypp  HexDLRewriter.cpp  HexDLRewriterDriver.cpp  HexDLRewriterParser.ypp  HexDLRewriterScanner.lpp  HexDLScanner.cpp  HexDLScanner.lpp  LogBuf.cpp  MTerm.cpp  Makefile.am  OWLParser.cpp  Ontology.cpp  Pred1Dim.cpp  Pred2Dim.cpp  Predicate.cpp  Prefix.cpp  Prefixes.cpp  Query.cpp  (+29 more)
testsuite/: LineScoop.py  Makefile.am  RacerRunner.sh  RacerStartOrRestart.sh  TestAll.cpp  TestCache.cpp  TestCache.h  TestDLOptimizer.cpp  TestDLOptimizer.h  TestDLRewriter.cpp  TestDLRewriter.h  TestOWLParser.cpp  TestOWLParser.h  TestRacerBuilder.cpp  TestRacerBuilder.h  TestRacerDirector.cpp  TestRacerDirector.h  TestRacerInterface.cpp  TestRacerInterface.h  TestRacerNRQL.cpp  TestRacerNRQL.h  TestRacerParse.cpp  TestRacerParse.h  TestRacerQuery.cpp  TestRacerQuery.h  TestRacerRunner.cpp  TestRacerRunner.h  TestRacerStream.cpp  TestRacerStream.h  TestRacerTypes.cpp  TestRacerTypes.h  TestSuite.cpp  TestSuite.h  compare_answersets_plain.py  run-dlvhex-tests.sh  run-tests.sh
