EXTRA_DIST = mytests.test \
             shop-consistent.dlp \
             shop-inconsistent.dlp \
             shop.dlp \
             shop.owl \
             test.dlp \
             test.owl \
             tweety_bird.dlp \
             tweety_bird.owl \
             wires.hex \
             wires.owl \
             tests/shop.out \
             tests/test.out \
             tests/wires.out
