EXTRA_DIST = mytests.test \
             shop-consistent.dlp \
             shop-inconsistent.dlp \
             shop.dlp \
             shop.owl \
             test.dlp \
             test.owl \
             tweety_bird.dlp \
             tweety_bird.owl \
             wires.hex \
             wires.owl \
             tests/shop.out \
             tests/shop+test.out \
             tests/shop-consistent.out \
             tests/shop-inconsistent.out \
             tests/shop-http.out \
             tests/test.out \
             tests/wires.out
