AUTOMAKE_OPTIONS = foreign

# including headers for make dist
noinst_HEADERS = \
                 Answer.h \
                 Cache.h \
                 DLError.h \
                 HexDLRewriterDriver.h \
                 HexDLRewriterFlexLexer.h \
                 KBManager.h \
                 LogBuf.h \
                 OWLParser.h \
                 Ontology.h \
                 Query.h \
                 QueryCtx.h \
                 QueryDirector.h \
                 QueryDirector.tcc \
                 RacerBuilder.h \
                 RacerExtAtom.h \
                 RacerInterface.h \
                 RacerKBManager.h \
                 RacerQueryExpr.h \
                 RacerQueryExpr.tcc \
                 RacerRunner.h \
                 Registry.h \
                 TCPStream.h \
                 UserDir.h \
                 RacerAnswerDriver.h \
                 RacerFlexLexer.h \
                 RacerNRQL.h \
                 RacerNRQL.tcc \
                 RacerNRQLBuilder.h
