AUTOMAKE_OPTIONS = gnu

# including headers for make dist
noinst_HEADERS = \
                 Answer.h \
                 AtomSeparator.h \
                 Cache.h \
                 DLError.h \
                 DLOptimizer.h \
                 DLQuery.h \
                 HexDLDriver.h \
                 HexDLFlexLexer.h \
                 HexDLRewriter.h \
                 KBManager.h \
                 LogBuf.h \
                 OWLParser.h \
                 Ontology.h \
                 Query.h \
                 QueryCtx.h \
                 QueryDirector.h \
                 QueryDirector.tcc \
                 RacerBuilder.h \
                 RacerExtAtom.h \
                 RacerExtAtom.tcc \
                 RacerInterface.h \
                 RacerKBManager.h \
                 RacerQueryExpr.h \
                 RacerQueryExpr.tcc \
                 Registry.h \
                 TCPStream.h \
                 RacerAnswerDriver.h \
                 RacerFlexLexer.h \
                 RacerNRQL.h \
                 RacerNRQL.tcc \
                 RacerNRQLBuilder.h \
                 URI.h \
                 Default.h \
                 DefaultParser.h \
                 Defaults.h \
                 DFConverter.h \
                 DFRewriter.h \
                 DLAtom.h \
                 DLRule.h \
                 DLRules.h \
                 Predicate.h \
                 MTerm.h \
                 Terms.h \
                 Update.h \
                 Updates.h \
								 Unifier.h

