# including headers for make dist
noinst_HEADERS = \
                 Answer.h \
                 AtomSeparator.h \
                 Cache.h \
                 DLError.h \
                 DLOptimizer.h \
                 DLQuery.h \
                 HexDLDriver.h \
                 HexDLConverter.h \
                 HexDLRewriter.h \
                 KBManager.h \
                 LogBuf.h \
                 OWLParser.h \
                 Ontology.h \
                 Query.h \
                 QueryCtx.h \
                 QueryDirector.h \
                 QueryDirector.tcc \
                 RacerBuilder.h \
                 RacerExtAtom.h \
                 RacerExtAtom.tcc \
                 RacerInterface.h \
                 RacerKBManager.h \
                 RacerQueryExpr.h \
                 RacerQueryExpr.tcc \
                 Registry.h \
                 TCPStream.h \
                 RacerAnswerDriver.h \
                 RacerNRQL.h \
                 RacerNRQL.tcc \
                 RacerNRQLBuilder.h \
                 URI.h \
                 Default.h \
                 Defaults.h \
                 DFConverter.h \
                 DFProcessor.h \
                 DFOutputBuilder.h \
                 DLAtom.h \
                 DLAtoms.h \
                 DLRule.h \
                 DLRules.h \
                 Predicate.h \
                 Pred1Dim.h \
                 Pred2Dim.h \
                 Prefix.h \
                 Prefixes.h \
                 MTerm.h \
                 Terms.h \
                 Update.h \
                 Updates.h 

